src/test/resources/miniJava/Test24.mjava
class Test24 {
	public static void main(String[] args){
		String s = null; // error
	}
}
